fix: style on mobile

--- a/src/pages/sponsor/index.less
+++ b/src/pages/sponsor/index.less
@@ -9,6 +9,9 @@
   &__introduction {
     text-align: left;
     padding: 10px 25vw;
+    @media (max-width: 512px) {
+      padding: 10px 5vw;
+    }
     line-height: 1.5;
     background: radial-gradient(#ee7621, #9198e5);
     a {
